<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="Home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_nav_search"
        android:title="Search" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_nav_map"
        android:title="Map" />

    <item
        android:id="@+id/nav_my_reservations"
        android:icon="@drawable/ic_nav_reservations"
        android:title="My Reservations" />

</menu>
